[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/ScoreSystem.gd" type="Script" id=1]
[ext_resource path="res://Scripts/EnemyIndicators.gd" type="Script" id=2]
[ext_resource path="res://Resources/Graphics/CombobarOutline.png" type="Texture" id=3]
[ext_resource path="res://Resources/Graphics/CombobarInside.png" type="Texture" id=4]
[ext_resource path="res://Resources/Fonts/Jacmax.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Resources/Graphics/Blood.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
spread = 69.92
gravity = Vector3( 0, 98, 0 )
initial_velocity = 46.15
initial_velocity_random = 0.04
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.19

[node name="HUD" type="CanvasLayer"]

[node name="EnemyIndicators" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ScoreSystem" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="ScoreSystem"]
margin_left = 50.0
margin_top = 50.0
margin_right = 94.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 22, 123 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.0823529, 0, 1 )
text = "0

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboBar" type="TextureProgress" parent="ScoreSystem"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 30.0
rect_scale = Vector2( 3, 2 )
max_value = 10.0
step = 0.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StreakLabel" type="Label" parent="ScoreSystem/ComboBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.1022
margin_right = 46.1022
margin_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "x 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreasingOfBar" type="Particles2D" parent="ScoreSystem/ComboBar"]
modulate = Color( 1, 0, 0, 1 )
z_index = 1
amount = 20
process_material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="ScoreLabelEffectTimer" type="Timer" parent="ScoreSystem"]
wait_time = 0.2
one_shot = true

[node name="BigScorePosition" type="Position2D" parent="ScoreSystem"]
position = Vector2( 72, 100 )

[node name="NormalScorePosition" type="Position2D" parent="ScoreSystem"]
position = Vector2( 50, 50 )
[connection signal="timeout" from="ScoreSystem/ScoreLabelEffectTimer" to="ScoreSystem" method="_on_ScoreLabelEffectTimer_timeout"]
